--- a/Project/MagazinOnline/templates/homepage.html
+++ b/Project/MagazinOnline/templates/homepage.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Project developed in {{ name }}</h2>
-    <p>This is my first template.</p>
+    <h2>Online shop</h2>
 {% endblock %}
