--- a/Project/MagazinOnline/templates/products.html
+++ b/Project/MagazinOnline/templates/products.html
@@ -15,7 +15,7 @@
 
 
     <ul>
-        {% for product in products %}
+        {% for product in page_obj %}
             <li>
                 <h3>{{ product.name }}</h3>
                 <h4>Category: {{ product.category.name }}</h4>
